# gabos_arm

./: README.md
lerobot/lerobot/: CHANGELOG.md
lerobot/lerobot_description/: CMakeLists.txt  package.xml
lerobot/lerobot_description/launch/: display.launch.py  publish_urdf.launch.py
lerobot/lerobot_description/urdf/: so101.urdf.xacro
lerobot/lerobot_gazebo/: CMakeLists.txt  package.xml
lerobot/lerobot_gazebo/config/: scenery.config
lerobot/lerobot_gazebo/launch/: spawn_models.launch.py  spawn_robot.launch.py  spawn_world.launch.py  start_gazebo.launch.py
lerobot/lerobot_gazebo/models/desk/: model.config
lerobot/lerobot_gazebo/models/desk/sdf/: desk.sdf
lerobot/lerobot_gazebo/models/lamp/: model.config
lerobot/lerobot_gazebo/models/lamp/sdf/: lamp.sdf
lerobot/lerobot_gazebo/worlds/: main_world.sdf
lerobot/lerobot_gazebo_bridge/: CMakeLists.txt  package.xml
lerobot/lerobot_gazebo_bridge/config/: bridge_config.yaml
lerobot/lerobot_gazebo_bridge/launch/: gazebo_bridge.launch.py
lerobot/lerobot_gazebo_bridge/urdf/: gazebo_materials_support.xacro
lerobot/lerobot_gazebo_plugins/: CMakeLists.txt  package.xml
lerobot/lerobot_gazebo_plugins/config/: topic_parameters.yaml
lerobot/lerobot_gazebo_plugins/include/lerobot_gazebo_plugins/: lerobot_hardware_interface.hpp  lerobot_moveit_adapter.hpp
lerobot/lerobot_gazebo_plugins/install/: local_setup.sh  setup.sh
lerobot/lerobot_gazebo_plugins/install/lerobot_gazebo_plugins/share/lerobot_gazebo_plugins/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
lerobot/lerobot_gazebo_plugins/launch/: spawn_controllers.launch.py
lerobot/lerobot_gazebo_plugins/log/: latest_build
lerobot/lerobot_gazebo_plugins/src/: lerobot_hardware_interface.cpp  lerobot_moveit_adapter.cpp
lerobot/lerobot_gazebo_plugins/urdf/: lerobot_arm_joint_position_model.xacro  lerobot_control.xacro  lerobot_hardware_interface_plugin.xml  lerobot_moveit_adapter_plugin.xml
lerobot/nodes/: package.xml  setup.py
lerobot/nodes/lerobot_teleop/: teleop_joints.py
