<?xml version="1.0"?>
<package format="3">
  <name>lerobot_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>Gazebo and ros2_control plugins for the LeRobot arm.</description>

  <maintainer email="tu_correo@example.com">Sofi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lerobot_description</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>xacro</depend>

  <depend>gz_sim_vendor</depend>
<depend>gz_plugin_vendor</depend>
<depend>gz_common_vendor</depend>

<depend>ros_gz_sim</depend>
<depend>ros_gz_bridge</depend>

<depend>gz_ros2_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>